Doggos names overwriting the placeholders

--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,14 @@ html{
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;First V
+    padding: 0;
   }
 
 div.lista{
     flex: auto;
     flex-direction: column;
+}
+.sided{
+    position: relative;
+    flex-direction: row;
 }
